# mimicc-ena-submission-assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  Dockerfile.dh-builder  ECOSYSTEM.md  README.md  Taskfile.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
assets/ena_schema/: ERC000015.xml  ERC000022.xml  ERC000025.xml  SRA.common.xsd  SRA.experiment.xsd
dh_builder_lib/: __init__.py
read-helper/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
read-helper/app/: main.py  read_assign.py  webin_cli_lib.py
schemas/: ENA_project.yaml  ERC000015.yaml  ERC000022.yaml  ERC000025.yaml  SRA_experiment.yaml  SRA_run.yaml  SRA_study.yaml  embrace.yaml  embrace_trimmed.yaml  ena_sample_core.yaml  mimicc.yaml  mimicc_experiment.yaml  mimicc_sample.yaml  mimicc_sample_experiment.yaml  mimicc_trimmed.yaml
scripts/: build_dh_template.sh  dh_build_steps.sh  dh_builder_entrypoint.sh  fetch_ena_checklists.sh  patch_dataharmonizer_toolbar.py  server_entrypoint.sh  vendor.sh
server/: _bootstrap.py  auth.py  credentials_store.py  dbsetup.py  dh_builder_runner.py  ena_service.py  main.py  middleware.py  read_assign.py  schema_service.py  session_store.py  views_auth.py  views_core.py  views_credentials.py  views_records.py  views_schemas.py  views_sessions.py  webin_runner.py
tests/: conftest.py  test_auth.py  test_compose_ui.py  test_prepare.py  test_read_assign.py  test_records_enrichment.py  test_schema_api.py  test_schema_service.py  test_server.py  test_sessions.py  test_ui.py
(+64 files in other folders)
