[project]
name = "mimicc-ena-submission-assistant"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Web app
    "Django>=5,<6",
    "django-cors-headers",
    "gunicorn",
    "redis",

    # Multi-user database + auth + Postgres
    "psycopg[binary]",

    # ena-api-client, ena-submission-toolkit, and standalone linkml-lib dependencies
    "httpx",
    "pydantic>=2",
    "pydantic-settings>=2",
    "PyYAML",
    "lxml",
    "pendulum",
    "typer",
    "linkml",

    # Pinned sibling packages (replaces scripts/vendor.sh's cp -R from ../<repo>).
    # Bump the tag here when a sibling repo cuts a new release.
    "ena-api-client @ git+https://github.com/timrozday-mgnify/ena-api-client.git@v0.1.0",
    "linkml-lib @ git+https://github.com/timrozday-mgnify/linkml-lib.git@v0.1.0",
    "ena-submission-toolkit @ git+https://github.com/timrozday-mgnify/ena-submission-toolkit.git@v0.1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# The app runs via PYTHONPATH (server/), not as an importable distribution —
# this table only exists so `pip install .` has something (empty) to build.
[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
